fixes line wrapping in lofi

--- a/djangobb_forum/static/djangobb_forum/css/lofi.css
+++ b/djangobb_forum/static/djangobb_forum/css/lofi.css
@@ -259,6 +259,10 @@ BBCode
     font-size: 10px;
 }
 
+.post-content {
+    white-space: pre-wrap;
+    word-wrap: break-word;
+}
 .post-content blockquote,
 .post-content .code {
     background: #eee;
@@ -267,6 +271,8 @@ BBCode
     box-shadow: inset 0 1px #fff;
     margin: 12px 0;
     padding: 12px;
+    overflow: scroll;
+    -webkit-overflow-scrolling: touch;
 }
 .bb-quote-author {
     font-weight: bold;
